# secipc

./: .gitignore  CMakeLists.txt
core/: CMakeLists.txt  client.cpp  commons.cpp  commons.hpp  server.cpp
py/: client.py  server.py
